--- a/contacto.html
+++ b/contacto.html
@@ -31,6 +31,30 @@
         <a href="https://www.netflix.com/ar/">
             <img src="../img/netflix.png" alt="logoNetflix" height="80">
             </a>
+            <!-- Formulario -->
+            <div class="formulario-contacto">
+            <h2>Contactanos</h2>
+            <form action="./confirmacion.html">
+
+                <div class="form-grupo">
+                    <label for=""  >Nombre</label>
+                    <input type="text" required autocomplete="off" name="nombre" placeholder="Ingrese su Nombre" id="">
+                </div>
+                <div class="form-grupo">
+                    <label for="">Apellido</label>
+                    <input type="text" required autocomplete="off" name="apellido" placeholder="Ingrese su Apellido" id="">
+                </div>
+                <div class="form-grupo" >
+                    <label for="" >Ingrese su correo</label>
+                    <input type="email" required autocomplete="off" name="mail" placeholder="tu@mail.com" id="">
+                </div>
+                <div>
+                    <textarea name="" id="" cols="30" rows="10">Mensaje</textarea>
+                </div>
+                <button type="submit">Enviar</button>
+
+            </form>
+        </div>
     </main>
 
 
