--- a/404.html
+++ b/404.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Codigo Error 404t</title>
-    <link rel="stylesheet" href="../CSS/error404.css">
+    <link rel="stylesheet" href="../segundoParcial/CSS/404.css">
 </head>
 <body class="contenido">
     <h1>Codigo 404 - Pagina no encontrada</h1>
     <p>La pagina no existe o se encuentra fuera de servicio</p>
-    <a href="../paginas/index.html" title="Inicio" class="Inicio">Volver</a>
+    <a href="../segundoParcial/index.html" title="Inicio" class="Inicio">Volver</a>
 </body>
 </html>
