--- a/confirmacion.html
+++ b/confirmacion.html
@@ -8,6 +8,6 @@
 </head>
 <body class="cuerpo">
     <h1>Felicitaciones! En breve nos contactaremos con vos</h1>
-    <a href="../paginas/index.html" title="Inicio" class="Inicio">Pantalla de Inicio</a>
+    <a href="../segundoParcial/index.html" title="Inicio" class="Inicio">Pantalla de Inicio</a>
 </body>
 </html>
