--- a/404.html
+++ b/404.html
@@ -9,6 +9,6 @@
 <body class="contenido">
     <h1>Codigo 404 - Pagina no encontrada</h1>
     <p>La pagina no existe o se encuentra fuera de servicio</p>
-    <a href="../segundoParcial/index.html" title="Inicio" class="Inicio">Volver</a>
+    <a href="index.html" title="Inicio" class="Inicio">Volver</a>
 </body>
 </html>
