--- a/sobre-serie.html
+++ b/sobre-serie.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Black Mirror - Sobre la Serie</title>
-    <link rel="icon" href="../segundoParcial/img/logo BM.jpeg" type="image/jpg">
+    <link rel="icon" href="../img/logo BM.jpeg" type="image/jpg">
     <link rel="stylesheet" href="../CSS/style-serie.css">
 </head>
 <body>
