--- a/confirmacion.html
+++ b/confirmacion.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Confirmacion</title>
+    <link rel="icon" href="../img/logo BM.jpeg" type="image/jpg">
     <link rel="stylesheet" href="../CSS/confirmacion.css">
 </head>
 <body class="cuerpo">
