--- a/temporada-episodio.html
+++ b/temporada-episodio.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Black Mirror - Temporadas y Episodios</title>
+    <link rel="icon" href="../img/logo BM.jpeg" type="image/jpg">
     <link rel="stylesheet" href="../CSS/style-temporadas.css">
 </head>
 
