--- a/elenco-personajes.html
+++ b/elenco-personajes.html
@@ -28,32 +28,32 @@
     <main class="cuerpo-elenco">
         <h1>Principales Actores de la temporada 6</h1>
         <section class="elenco">
-            <img src="../img/Salma Hayek.jpg" alt="Salma" title="Salma Hayek" height="100"  class="Salma">
+            <img src="../img/Salma Hayek.jpg" alt="Salma" title="Salma Hayek" height="100" width="80" class="Salma">
             <h2>Salma Hayek</h2>
             <p>Protagoniza Joan Is Awful como ella misma (versión de Streamberry), una versión exagerada y satírica en una serie dentro de la serie.</p> 
         </section>
         <section class="elenco">
-            <img src="../img/Zazie Beetz.jpg" alt="Zazie" title="Zazie Beetz" height="80" class="zazie">
+            <img src="../img/Zazie Beetz.jpg" alt="Zazie" title="Zazie Beetz" height="100" class="zazie">
             <h2>Zazie Beetz</h2>
             <p>Protagoniza Mazey Day como Bo, una fotógrafa paparazzi con conflictos morales, que se ve envuelta en una historia sobrenatural mientras sigue a una celebridad desaparecida.</p>
         </section>
         <section class="elenco">
-            <img src="../img/Aaron Paul.jpg" alt="aaron" title="Aaron Paul" height="80"  class="aron">
+            <img src="../img/Aaron Paul.jpg" alt="aaron" title="Aaron Paul" height="100" width="80" class="aron">
             <h2>Aaron Paul</h2>
             <p>Interpreta a Cliff Stanfield en Beyond the Sea. Un astronauta emocionalmente contenido, atrapado entre el deber espacial y una vida familiar distante en la Tierra.</p>
         </section>
         <section class="elenco">
-            <img src="../img/Kate Mara.jpg" alt="Kate Mara" title="Kate Mara" height="80" class="kate">
+            <img src="../img/Kate Mara.jpg" alt="Kate Mara" title="Kate Mara" height="100" class="kate">
             <h2>Kate Mara</h2>
             <p>Da vida a Lana Stanfield en Beyond the Sea. Esposa de Cliff, una mujer introspectiva que anhela conexión y calor humano en medio del aislamiento.</p>
         </section>
         <section class="elenco">
-            <img src="../img/Josh Hartnett.jpg" alt="Josh" title="Josh Hartnett" height="80"  class="josh">
+            <img src="../img/Josh Hartnett.jpg" alt="Josh" title="Josh Hartnett" height="100" width="120" class="josh">
             <h2>Josh Hartnett</h2>
             <p>Es David Ross en Beyond the Sea. Otro astronauta, más sensible y afectuoso, cuya tragedia personal lo empuja a la desesperación.</p>
         </section>
         <section class="elenco">
-            <img src="../img/Anjana Vasan.jpeg" alt="Anjana" title="Anjana Vasan" height="80"  class="anjana">
+            <img src="../img/Anjana Vasan.jpeg" alt="Anjana" title="Anjana Vasan" height="100" width="120" class="anjana">
             <h2>Anjana Vasan</h2>
             <p>Interpreta a Nida en Demon 79. Una dependienta tímida que es empujada al límite cuando se ve forzada a cometer actos extremos para evitar el apocalipsis.</p>
         </section>
