--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
                     <li><a href="temporada-episodio.html">Temporadas y Episodios</a></li>
                     <li><a href="premios-criticas.html">Eventos y Curiosidades</a></li>
                     <li><a href="contacto.html">Contacto</a></li>
+                    <button id="Boton" class="oculto">Mi boton</button>
                 </ul>
             </nav>
                 <h1>Black Mirror: el lado oscuro de la tecnología</h1>
