--- a/index.html
+++ b/index.html
@@ -19,9 +19,22 @@
                     <li><a href="temporada-episodio.html">Temporadas y Episodios</a></li>
                     <li><a href="premios-criticas.html">Eventos y Curiosidades</a></li>
                     <li><a href="contacto.html">Contacto</a></li>
-                    <button id="Boton" class="oculto">Mi boton</button>
                 </ul>
             </nav>
+
+            <!--Boton oculto del menu-->
+            <input type="checkbox" id="toggle">
+            <label for="toggle" class="burger"></label>
+            <nav class="nav-centro">
+                <ul>
+                    <li><a href="sobre-serie.html">Sobre la Serie</a></li>
+                    <li><a href="elenco-personajes.html">Elenco y Personajes</a></li>
+                    <li><a href="temporada-episodio.html">Temporadas y Episodios</a></li>
+                    <li><a href="premios-criticas.html">Eventos y Curiosidades</a></li>
+                    <li><a href="contacto.html">Contacto</a></li>
+                </ul>
+            </nav> 
+
                 <h1>Black Mirror: el lado oscuro de la tecnología</h1>
                 <p>Una serie antológica que explora un futuro inquietante donde la tecnología choca con lo más oscuro de la naturaleza humana.</p>
         </header>
