--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
                 <a href="index.html" title="Inicio">
                     <img src="../img/logo BM.jpeg" alt="logo" class="nav-izquierda">
                 </a>
+                <input type="checkbox" id="toggle">
+                <label for="toggle" class="hamburger">☰</label>
                 <ul class="nav-centro">
                     <li><a href="sobre-serie.html">Sobre la Serie</a></li> 
                     <li><a href="elenco-personajes.html">Elenco y Personajes</a></li>
