--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
                 <a href="index.html" title="Inicio">
                     <img src="../img/logo BM.jpeg" alt="logo" class="nav-izquierda">
                 </a>
-                <input type="checkbox" id="toggle">
-                <label for="toggle" class="hamburger">☰</label>
+                <a href="#panelHamburguesa" id="Abrir">
+                    <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#1f1f1f"><path d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z"/></svg>
+                </a>
                 <ul class="nav-centro">
                     <li><a href="sobre-serie.html">Sobre la Serie</a></li> 
                     <li><a href="elenco-personajes.html">Elenco y Personajes</a></li>
