--- a/index.html
+++ b/index.html
@@ -12,10 +12,7 @@
             <nav class="nav-centro">
                 <a href="index.html" title="Inicio">
                     <img src="../img/logo BM.jpeg" alt="logo" class="nav-izquierda">
-                </a>
-                <a href="#panelHamburguesa" id="Abrir">
-                    <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#1f1f1f"><path d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z"/></svg>
-                </a>
+                </a>               
                 <ul class="nav-centro">
                     <li><a href="sobre-serie.html">Sobre la Serie</a></li> 
                     <li><a href="elenco-personajes.html">Elenco y Personajes</a></li>
@@ -23,6 +20,7 @@
                     <li><a href="premios-criticas.html">Eventos y Curiosidades</a></li>
                     <li><a href="contacto.html">Contacto</a></li>
                 </ul>
+                <div class="nav-toggle">☰</div>
             </nav>
                 <h1>Black Mirror: el lado oscuro de la tecnología</h1>
                 <p>Una serie antológica que explora un futuro inquietante donde la tecnología choca con lo más oscuro de la naturaleza humana.</p>
