--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                 <a href="index.html" title="Inicio">
                     <img src="../img/logo BM.jpeg" alt="logo" class="nav-izquierda">
                 </a>               
-                <ul class="nav-centro">
+                <ul class="nav-menu">
                     <li><a href="sobre-serie.html">Sobre la Serie</a></li> 
                     <li><a href="elenco-personajes.html">Elenco y Personajes</a></li>
                     <li><a href="temporada-episodio.html">Temporadas y Episodios</a></li>
