--- a/index.html
+++ b/index.html
@@ -9,18 +9,20 @@
 </head>
 <body>
         <header class="cuerpo">
+            <input type="checkbox" id="toggle">
+                <label for="toggle" class="burger">☰</label>   
             <nav class="nav-centro">
                 <a href="index.html" title="Inicio">
                     <img src="../img/logo BM.jpeg" alt="logo" class="nav-izquierda">
-                </a>               
-                <ul class="nav-menu">
+                </a>
+                <ul class="nav-menu" id="Abrir">
                     <li><a href="sobre-serie.html">Sobre la Serie</a></li> 
                     <li><a href="elenco-personajes.html">Elenco y Personajes</a></li>
                     <li><a href="temporada-episodio.html">Temporadas y Episodios</a></li>
                     <li><a href="premios-criticas.html">Eventos y Curiosidades</a></li>
                     <li><a href="contacto.html">Contacto</a></li>
                 </ul>
-                <div class="nav-toggle">☰</div>
+               <!-- <div class="nav-toggle" id="cerrar">☰</div> -->
             </nav>
                 <h1>Black Mirror: el lado oscuro de la tecnología</h1>
                 <p>Una serie antológica que explora un futuro inquietante donde la tecnología choca con lo más oscuro de la naturaleza humana.</p>
