--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 </head>
 <body>
         <header class="cuerpo">
-            <input type="checkbox" id="toggle">
-                <label for="toggle" class="burger">☰</label>   
             <nav class="nav-centro">
                 <a href="index.html" title="Inicio">
                     <img src="../img/logo BM.jpeg" alt="logo" class="nav-izquierda">
                 </a>
-                <ul class="nav-menu" id="Abrir">
+                <input type="checkbox" id="toggle">
+                <label for="toggle" class="burger">☰</label>   
+                <ul class="nav-menu">
                     <li><a href="sobre-serie.html">Sobre la Serie</a></li> 
                     <li><a href="elenco-personajes.html">Elenco y Personajes</a></li>
                     <li><a href="temporada-episodio.html">Temporadas y Episodios</a></li>
