--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                 <a href="index.html" title="Inicio">
                     <img src="../img/logo BM.jpeg" alt="logo" class="nav-izquierda">
                 </a>
-                <input type="button" id="toggle">
+                <input type="checkbox" id="toggle">
                 <label for="toggle" class="burger">☰</label>   
                 <ul class="nav-menu">
                     <li><a href="sobre-serie.html">Sobre la Serie</a></li> 
