--- a/sobre-serie.html
+++ b/sobre-serie.html
@@ -13,7 +13,9 @@
             <a href="index.html" title="Inicio">
                 <img src="../img/logo BM.jpeg" alt="logo" class="nav-serieizquierda">
             </a>
-            <ul class="nav-centroSerie">
+            <input type="checkbox" id="toggle">
+                <label for="toggle" class="burger">☰</label>       
+            <ul class="nav-menu"></ul>                            <!--ul class="nav-centroSerie"-->
                 <li><a href="sobre-serie.html">Sobre la Serie</a></li> 
                 <li><a href="elenco-personajes.html">Elenco y Personajes</a></li>
                 <li><a href="temporada-episodio.html">Temporadas y Episodios</a></li>
