--- a/elenco-personajes.html
+++ b/elenco-personajes.html
@@ -13,6 +13,8 @@
             <a href="index.html" title="Inicio">
                 <img src="../img/logo BM.jpeg" alt="logo" class="nav-izquierda-elenco">
             </a>
+            <input type="checkbox" id="toggle">
+            <label for="toggle" class="burger">☰</label>
             <ul class="nav-centro-elenco">
                 <li><a href="sobre-serie.html">Sobre la Serie</a></li> 
                 <li><a href="elenco-personajes.html">Elenco y Personajes</a></li>
