--- a/temporada-episodio.html
+++ b/temporada-episodio.html
@@ -16,6 +16,8 @@
             <a href="index.html" title="Inicio">
                 <img src="../img/logo BM.jpeg" alt="logo" class="nav-izquierda-temporadas">
             </a>
+            <input type="checkbox" id="toggle">
+            <label for="toggle" class="burger">☰</label>
             <ul class="nav-centro-temporadas">
                 <li><a href="sobre-serie.html">Sobre la Serie</a></li> 
                 <li><a href="elenco-personajes.html">Elenco y Personajes</a></li>
