--- a/premios-criticas.html
+++ b/premios-criticas.html
@@ -15,6 +15,8 @@
             <a href="index.html" title="Inicio">
                 <img src="../img/logo BM.jpeg" alt="logo" class="nav-izquierda-premios">
             </a>
+            <input type="checkbox" id="toggle">
+            <label for="toggle" class="burger">☰</label>
             <ul class="nav-centro-premios">
                 <li><a href="sobre-serie.html">Sobre la Serie</a></li> 
                 <li><a href="elenco-personajes.html">Elenco y Personajes</a></li>
