--- a/sobre-serie.html
+++ b/sobre-serie.html
@@ -15,7 +15,7 @@
             </a>
             <input type="checkbox" id="toggle">
                 <label for="toggle" class="burger">☰</label>       
-            <ul class="nav-menu">                            <!--ul class="nav-centroSerie"-->
+            <ul class="nav-menu">                         
                 <li><a href="sobre-serie.html">Sobre la Serie</a></li> 
                 <li><a href="elenco-personajes.html">Elenco y Personajes</a></li>
                 <li><a href="temporada-episodio.html">Temporadas y Episodios</a></li>
